Change ProjectZomboid64.json updater