@@ -73,6 +73,7 @@ test -f "${FILE_PZLSM_CONFIG_LOCAL}" && . "${FILE_PZLSM_CONFIG_LOCAL}"
 [ -z "${UTIL_RCON_VERSION}" ] && UTIL_RCON_VERSION="0.4.0"
 [ -z "${SERVER_MEMORY_LIMIT}" ] && SERVER_MEMORY_LIMIT=2048
 [ -z "${SERVER_NAME}" ] && SERVER_NAME="servertest"
+[ -z "${SERVER_LANG}" ] && SERVER_LANG="en"
 [ -z "${SERVER_DIR}" ] && SERVER_DIR="${HOME}/pz/server"
 [ -z "${ZOMBOID_DIR}" ] && ZOMBOID_DIR="${SERVER_DIR}/Zomboid"
 [ -z "${FIRST_RUN_ADMIN_PASSWORD}" ] && FIRST_RUN_ADMIN_PASSWORD="changeme"
@@ -289,22 +290,24 @@ function install_server() {
   # Return to the script directory.
   cd ${BASEDIR}
 
-  # Sett memory limit for JVM.
   # TODO: Put in a function and make it customizable depending on the received arguments.
-  sed -i -r "s/Xms2048m/Xms${SERVER_MEMORY_LIMIT}m/g" "${SERVER_DIR}/ProjectZomboid64.json"
-  sed -i -r "s/Xmx2048m/Xmx${SERVER_MEMORY_LIMIT}m/g" "${SERVER_DIR}/ProjectZomboid64.json"
-
-  # Sett the home directory for the game, utf8 encoding and server name.
+  # Set the home directory for the game, utf8 encoding and server name.
   local arg_home=$(grep "Duser.home" "${SERVER_DIR}/ProjectZomboid64.json")
   if [ ! "${arg_home}" ]; then
+    # Set memory limit for JVM.
+    sed -i -r "s/Xmx8g/Xmx${SERVER_MEMORY_LIMIT}m/g" "${SERVER_DIR}/ProjectZomboid64.json"
+
+    sed -i -r "s/-XX:+UseZGC/-XX:+UseG1GC/g" "${SERVER_DIR}/ProjectZomboid64.json"
+
     local indent="\r\n\t\t"
 
     local set_home='"-Duser.home=.\/"'
     local set_encoding='"-Dfile.encoding=UTF-8"'
     local set_servername="\"-Dservername=${SERVER_NAME}\""
+    local set_serverlang="\"-Duser.language=${SERVER_LANG}\""
 
     local _search='"-Dzomboid.steam=1",'
-    local _replace="${_search}${indent}${set_home},${indent}${set_encoding},${indent}${set_servername},"
+    local _replace="${_search}${indent}${set_home},${indent}${set_encoding},${indent}${set_servername},${indent}${set_serverlang},"
 
     sed -i -r "s/${_search}/${_replace}/g" "${SERVER_DIR}/ProjectZomboid64.json"
   fi
